--- a/bundle/Brewfile
+++ b/bundle/Brewfile
@@ -5,7 +5,7 @@ upgrade
 tap homebrew/versions
 tap phinze/homebrew-cask
 tap homebrew/binary
-tap caskroom/fonts
+tap sanemat/font
 # パッケージインストール
 install brew-cask
 install zsh
