--- a/bundle/Brewfile
+++ b/bundle/Brewfile
@@ -1,5 +1,4 @@
 tap 'caskroom/cask'
-tap 'caskroom/fonts'
 tap 'homebrew/binary'
 tap 'homebrew/brewdler'
 tap 'homebrew/dupes'
@@ -7,66 +6,122 @@ tap 'homebrew/php'
 tap 'homebrew/python'
 tap 'homebrew/science'
 tap 'homebrew/versions'
+tap 'homebrew/x11'
 tap 'manastech/crystal'
 tap 'mattintosh4/comix'
+tap 'pedromartins/webkit'
 tap 'phinze/cask'
 tap 'sanemat/font'
+tap 'sitespeedio/sitespeedio'
+tap 'tcnksm/ghr'
+tap 'tobli/browsertime'
 cask 'java'
 cask 'xquartz'
 brew 'libyaml'
-brew 'ansible'
 brew 'pkg-config'
 brew 'makedepend'
 brew 'openssl', args: ['universal']
+brew 'ansible'
 brew 'apib'
-brew 'xz'
-brew 'pcre'
-brew 'gettext'
-brew 'git'
-brew 'go'
 brew 'asciinema'
+brew 'cmake'
+brew 're2c'
+brew 'bison'
+brew 'gringo'
+brew 'clasp'
+brew 'aspcud'
+brew 'xz'
+brew 'gettext'
 brew 'libffi'
 brew 'glib'
+brew 'libpng', args: ['universal']
+brew 'freetype', args: ['universal']
+brew 'fontconfig', args: ['universal']
+brew 'pixman'
+brew 'cairo'
+brew 'pcre'
+brew 'git'
 brew 'gobject-introspection'
 brew 'atk'
 brew 'autoconf'
 brew 'autojump'
 brew 'automake'
 brew 'awscli'
-brew 'bison'
+brew 'bchunk'
+brew 'bdw-gc'
 brew 'blink1'
 brew 'docker'
 brew 'boot2docker'
 brew 'bsdmake'
+brew 'bullet'
 brew 'c-ares'
 brew 'cabextract'
-brew 'libpng', args: ['universal']
-brew 'freetype', args: ['universal']
-brew 'fontconfig', args: ['universal']
-brew 'pixman'
-brew 'cairo'
+brew 'ocaml'
+brew 'camlp4'
 brew 'ccache'
+brew 'cdrtools'
+brew 'chromedriver'
 brew 'gmp'
 brew 'isl'
 brew 'cloog'
-brew 'cmake'
 brew 'cocot'
 brew 'ctags'
 brew 'libssh2'
 brew 'curl', args: ['with-libssh2']
+brew 'libsodium'
 brew 'zeromq'
 brew 'czmq'
 brew 'd-bus'
 brew 'dateutils'
 brew 'dnsmasq'
+brew 'ssdeep'
+brew 'geoip'
+brew 'dnstwist'
+brew 'docbook'
+brew 'docbook-xsl'
 brew 'docker-machine'
+brew 'ecm'
+brew 'jpeg', args: ['universal']
+brew 'libtiff', args: ['universal']
+brew 'giflib'
+brew 'webp'
+brew 'luajit'
+brew 'fribidi'
+brew 'gstreamer'
+brew 'gdk-pixbuf'
+brew 'jasper', args: ['universal']
+brew 'icu4c'
+brew 'harfbuzz'
+brew 'pango'
+brew 'hicolor-icon-theme'
+brew 'gtk+'
+brew 'libogg'
+brew 'libvorbis'
+brew 'gst-plugins-base'
+brew 'intltool'
+brew 'libtasn1', args: ['universal']
+brew 'nettle'
+brew 'gnutls'
+brew 'gsettings-desktop-schemas'
+brew 'glib-networking'
+brew 'readline'
+brew 'sqlite'
+brew 'vala'
+brew 'libsoup'
+brew 'flac'
+brew 'gst-plugins-good'
+brew 'libtool', args: ['universal']
+brew 'json-c'
+brew 'libsndfile'
+brew 'libsamplerate'
+brew 'libepoxy'
+brew 'gtk+3'
+brew 'pulseaudio'
+brew 'efl'
 brew 'eigen'
 brew 'faac'
 brew 'fdk-aac'
 brew 'texi2html'
-brew 'readline'
-brew 'icu4c'
-brew 'sqlite'
 brew 'gdbm'
 brew 'python'
 brew 'yasm'
@@ -74,39 +129,28 @@ brew 'x264'
 brew 'lame'
 brew 'libvo-aacenc'
 brew 'xvid'
-brew 'jpeg', args: ['universal']
-brew 'libtiff', args: ['universal']
-brew 'webp'
 brew 'ffmpeg', args: ['with-fdk-aac']
-brew 'fig'
 brew 'figlet'
-brew 'libtool', args: ['universal']
-brew 'harfbuzz'
-brew 'pango'
 brew 'fontforge'
 brew 'gawk'
 brew 'mpfr'
 brew 'libmpc'
 brew 'gcc'
 brew 'gd', args: ['universal']
-brew 'gdk-pixbuf'
-brew 'geoip'
 brew 'git-extras'
 brew 'git-ftp'
 brew 'gnu-getopt'
 brew 'git-now'
 brew 'gitup'
-brew 'libtasn1'
-brew 'nettle'
-brew 'gnutls'
-brew 'jasper', args: ['universal']
+brew 'glew'
+brew 'libxml2', args: ['with-python']
+brew 'gnome-doc-utils'
+brew 'gom'
 brew 'netpbm'
 brew 'gts'
 brew 'graphviz'
 brew 'griffon'
-brew 'hicolor-icon-theme'
-brew 'gtk+'
-brew 'intltool'
+brew 'gtk-doc'
 brew 'gtk-engines'
 brew 'hr'
 brew 'htop-osx'
@@ -116,8 +160,8 @@ brew 'openexr'
 brew 'imagemagick'
 brew 'iperf'
 brew 'jpeg-turbo'
+brew 'oniguruma'
 brew 'jq'
-brew 'json-c'
 brew 'lastpass-cli'
 brew 'legit'
 brew 'sdl'
@@ -134,37 +178,46 @@ brew 'libmemcached'
 brew 'libpcl'
 brew 'libsass'
 brew 'libstfl'
-brew 'libxml2'
 brew 'llvm'
+brew 'lzlib'
 brew 'mariadb'
+brew 'maven'
 brew 'mhash'
 brew 'mcrypt'
 brew 'mecab'
 brew 'mecab-ipadic'
 brew 'mercurial'
 brew 'mycli'
+brew 'ncdu'
 brew 'netcat'
 brew 'nodebrew'
+brew 'opam'
 brew 'p7zip'
+brew 'pbzip2'
 brew 'peco'
+brew 'phantomjs'
 brew 'picoc'
+brew 'pigz'
 brew 'proctools'
+brew 'progress'
 brew 'protobuf'
 brew 'py2cairo'
 brew 'pygobject'
 brew 'pygtk'
+brew 'q'
 brew 'qt'
 brew 'qcachegrind'
+brew 'ruby-build'
 brew 'rbenv'
 brew 'rbenv-gem-rehash'
 brew 'rbenv-gemset'
-brew 're2c'
 brew 'reaver'
-brew 'ruby-build'
 brew 's-lang'
 brew 's3cmd'
 brew 'sane-backends', args: ['universal']
+brew 'sbt'
 brew 'scala'
+brew 'scrollkeeper'
 brew 'sdl_image'
 brew 'sdl_mixer'
 brew 'sdl_sound'
@@ -172,8 +225,11 @@ brew 'sdl_ttf'
 brew 'selenium-server-standalone'
 brew 'siege'
 brew 'sipcalc'
+brew 'skinny'
+brew 'slimerjs'
 brew 'spark'
 brew 'ssh-copy-id'
+brew 'switchaudio-osx'
 brew 'tcc'
 brew 'tig'
 brew 'tmux'
@@ -183,17 +239,24 @@ brew 'unrar'
 brew 'vim'
 brew 'wakeonlan'
 brew 'wget'
-brew 'wine'
+brew 'wine', args: ['devel']
 brew 'winetricks'
+brew 'xhyve'
 brew 'zsh'
 brew 'caskroom/cask/brew-cask'
 brew 'homebrew/dupes/bzip2'
 brew 'homebrew/dupes/ncurses'
+brew 'homebrew/dupes/zlib'
+brew 'homebrew/python/numpy'
 brew 'homebrew/python/pillow'
+brew 'homebrew/science/opencv'
 brew 'homebrew/versions/boost149'
-brew 'manastech/crystal/crystal-lang', args: ['with-llvm']
+brew 'homebrew/x11/zenity'
 brew 'mattintosh4/comix/comix'
 brew 'sanemat/font/ricty'
+brew 'tobli/browsertime/browsertime'
+brew 'sitespeedio/sitespeedio/sitespeed.io'
+brew 'tcnksm/ghr/ghr'
 cask 'adobe-air'
 cask 'alfred'
 cask 'asepsis'
@@ -206,10 +269,12 @@ cask 'caffeine'
 cask 'controllermate'
 cask 'coteditor'
 cask 'dropbox'
+cask 'duet'
 cask 'evernote'
 cask 'filezilla'
 cask 'firefox'
 cask 'flash-player'
+cask 'fluid'
 cask 'google-chrome'
 cask 'google-japanese-ime'
 cask 'hyperswitch'
@@ -223,6 +288,7 @@ cask 'malwarebytes-anti-malware'
 cask 'onyx'
 cask 'openoffice'
 cask 'opera-mail'
+cask 'osxfuse'
 cask 'owncloud'
 cask 'packer'
 cask 'phpstorm'
@@ -235,6 +301,7 @@ cask 'skype'
 cask 'snes9x'
 cask 'sqlworkbenchj'
 cask 'streamtools'
+cask 'terminology'
 cask 'the-unarchiver'
 cask 'unetbootin'
 cask 'unity'
