--- a/.vim.conf/.bundlerc
+++ b/.vim.conf/.bundlerc
@@ -1,3 +1,5 @@
 NeoBundle 'Shougo/unite.vim'
 NeoBundle 'h1mesuke/unite-outline'
 NeoBundle 'tomasr/molokai'
+NeoBundle 'scrooloose/nerdtree'
+NeoBundle 'Townk/vim-autoclose'
