--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 # デフォルトエディタの設定
-export EDITOR=vim
-export CXX="ccache g++"
-export CC="ccache gcc"
+export EDITOR='vim' # nanoからvimに変更
+export VISUAL='vim' # nanoからvimに変更
+export PAGER='less'
+#export CXX="ccache g++"
+#export CC="ccache gcc"
+export CC=gcc
 export _JAVA_OPTIONS="-Xms1024M -Xmx1024M"
 export APP_ENV=local
+export ANDROID_SDK_ROOT="/usr/local/share/android-sdk"
+export GO111MODULE=on
